grammar.txt
statements  : NEWLINE* expr  (NEWLINE+ expr )* NEWLINE*

expr        : KEYWORD:VAR IDENTIFIER EQ expr
            : comp-expr ((KEYWORD:AND|KEYWORD:OR) comp-expr)*

comp-expr   : NOT comp-expr
            : arith-expr ((EE|LT|GT|LTE|GTE) arith-expr)*

arith-expr  :	term ((PLUS|MINUS) term)*

term        : factor ((MUL|DIV) factor)*

factor      : (PLUS|MINUS) factor
            : power

power       : call (POW factor)*

call        : atom (LPAREN (expr (COMMA expr)*)? RPAREN)?

atom        : INT|FLOAT|STRING|IDENTIFIER
            : LPAREN expr RPAREN
            : list-expr
            : if-expr
            : for-expr
            : while-expr
            : func-def

list-expr   : LSQUARE (expr (COMMA expr)*)? RSQUARE

if-expr     : KEYWORD:IF expr KEYWORD:THEN
              (expr if-expr-b|if-expr-c?)
            | (NEWLINE statements RBRACE|if-expr-b|if-expr-c)

if-expr-b   : KEYWORD:ELIF expr KEYWORD:THEN
              (expr if-expr-b|if-expr-c?)
            | (NEWLINE statements RBRACE|if-expr-b|if-expr-c)

if-expr-c   : KEYWORD:ELSE
              expr
            | (NEWLINE statements RBRACE)

for-expr    : KEYWORD:FOR IDENTIFIER EQ expr KEYWORD:TO expr 
              (KEYWORD:STEP expr)? KEYWORD:THEN
              expr
            | (NEWLINE statements RBRACE)

while-expr  : KEYWORD:WHILE expr KEYWORD:THEN
              expr 
            | (NEWLINE statements RBRACE)

func-def    : KEYWORD:FUN IDENTIFIER?
              LPAREN (IDENTIFIER (COMMA IDENTIFIER)*)? RPAREN
              (COLON expr)
            | (NEWLINE statements KEYWORD:END)
